--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  display: flex;
+  align-items: stretch;
+  justify-content: center
 }
 
 .App-logo {
@@ -31,4 +34,13 @@
 
 .rotated {
   stroke: steelBlue;
+}
+
+.chart-wrapper {
+  display: inline-block;
+}
+
+.options-container {
+  display: inline-block;
+  border: 1px dotted blue;
 }
